--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/trysound/angular-chordy#readme",
   "devDependencies": {
+    "babel-plugin-iife-wrap": "^1.1.0",
+    "babel-preset-es2015": "^6.6.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
