--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
-[{*.{json,yml}}]
+[{*.{json,yml},karma.conf.js}]
 indent_style = space
 indent_size = 2
