--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/angular-chordy.js",
   "scripts": {
     "tdd": "gulp tdd",
-    "pretest": "gulp build",
+    "build": "gulp build",
     "test": "gulp test"
   },
   "repository": {
