--- a/bower.json
+++ b/bower.json
@@ -22,9 +22,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.3"
+    "angular": "~1.5.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.3"
+    "angular-mocks": "~1.5.3"
   }
 }
